--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "author": "Han",
   "minAppVersion": "1.5.0",
   "name": "neovim-edit",
-  "version": "v1.0.2",
+  "version": "1.0.3",
   "description": "This plugin allows you to seamlessly use NeoVim to edit your notes within Obsidian",
   "id": "neovim-edit",
   "isDesktopOnly": true
